--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -51,6 +51,10 @@
         "settings": {
           "bundleName": "sapui5.i18n.i18n"
         }
+      },
+      "invoice": {
+        "type": "sap.ui.model.json.JSONModel",
+        "uri": "Invoices.json"
       }
     },
     "resources": {
