--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
   "devDependencies": {
+    "@sap/ux-specification": "^1.139.0",
+    "@sap/ux-ui5-tooling": "^1.19.5",
     "@ui5/cli": "^4.0.16",
-    "@sap/ux-ui5-tooling": "1"
+    "ui5-middleware-simpleproxy": "^3.5.2"
   },
   "scripts": {
     "start": "fiori run --open \"test/flp.html#app-preview\"",
