--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -14,6 +14,15 @@
       "id": "@sap/generator-fiori:basic",
       "version": "1.19.5",
       "toolsId": "348c7fef-e883-4a63-b058-f833ddbb6351"
+    },
+     "dataSources": {
+      "invoiceRemote": {
+        "uri": "/destinations/Northwind/V2/Northwind/Northwind.svc/",
+        "type": "OData",
+        "settings": {
+          "odataVersion": "2.0"
+        }
+      }
     }
   },
   "sap.ui": {
@@ -53,8 +62,7 @@
         }
       },
       "invoice": {
-        "type": "sap.ui.model.json.JSONModel",
-        "uri": "Invoices.json"
+        "dataSource": "invoiceRemote"
       }
     },
     "resources": {
